@@ -1,3 +1,13 @@
+2018-08-10  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	Backport from mainline
+	2018-06-19  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR target/86197
+	* config/rs6000/rs6000.md (rs6000_discover_homogeneous_aggregate): An
+	ieee128 argument takes up only one (vector) register, not two (floating
+	point) registers.
+
 2018-07-29  John David Anglin  <danglin@gcc.gnu.org>
 
 	* config/pa/pa.c (pa_output_addr_vec): Align address table.
